minor css tryout

--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <style type="text/css">
+    #content {
+        position: relative;
+        display: inline-block;
+    }
+
+    #top-text {
+      color: #FFF;
+      font-size: 32px;
+      position: absolute;
+      top: 0; left: 30%;
+    }
+
+    #bottom-text {
+      color: #FFF;
+      font-size: 32px;
+      position: absolute;
+      bottom: 0; left: 30%;
+    }
+    </style>
+</head>
+
 <body>
-  <div id="content">
-    {% block content %}
-    {% endblock %}
-  </div>
+    <div id="content">
+        {% block content %} {% endblock %}
+    </div>
 </body>
+
 </html>
