--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-  <h1>{{top}}</h1>
-  <h1>{{bottom}}</h1>
+  <h1 id="top-text">{{top}}</h1>
+  <h1 id="bottom-text">{{bottom}}</h1>
   <img src="{{image}}">
 {% endblock %}
