--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -8,18 +8,24 @@
         display: inline-block;
     }
 
-    #top-text {
+    h1 {
       color: #FFF;
-      font-size: 32px;
+      font-size: 50px;
       position: absolute;
-      top: 0; left: 30%;
+      text-align: center;
+      width: 100%;
+      word-wrap: break-word;
+      text-shadow: 1px 1px 1px #000;
+    }
+
+    #top-text {
+      top: 0;
+      margin-top: 5px;
     }
 
     #bottom-text {
-      color: #FFF;
-      font-size: 32px;
-      position: absolute;
-      bottom: 0; left: 30%;
+      bottom: 0;
+      margin-bottom: 5px;
     }
     </style>
 </head>
